Linux: Prefer using KDE-specific printer manager.

KDE has its own printer management UI software, and
system-config-printer may not be available.

BUG=806432

Change-Id: I1a1a2c9f3f09e2e62688d2e6abbda893a5e90e86
Reviewed-on: https://chromium-review.googlesource.com/896112
Reviewed-by: Thomas Anderson <thomasanderson@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533469}
Former-commit-id: 12801af0ae72422abf64e3ad857d84a447c9626d